kubernetes-dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetesdashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  tls:
    - secretName: kubernetes-dashboard-tls
      hosts:
        - k3s.thepi.cloud
  rules:
    - host: k3s.thepi.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetesdashboard
                port:
                  number: 443
